# 7542_Taller_TP_Final

./: CMakeLists.txt  README.md  common_event.h  common_eventdto.cpp  common_eventdto.h  common_move.h  server_protocol.cpp  testprotocol.cpp
Client/: main.cpp
Client/src/: CMakeLists.txt  Client.cpp  Client.h  ClientProtocol.cpp  ClientProtocol.h  EventSender.cpp  EventSender.h  Game.cpp  Game.h  GameDrawner.cpp  GameDrawner.h  Match.cpp  Match.h  SnapshotReceiver.cpp  SnapshotReceiver.h  clientLauncher.cpp  clientLauncher.h  client_client.cpp  client_client.h  client_connect.cpp  client_connect.h  client_createView.cpp  client_createView.h  client_initview.cpp  client_initview.h  client_joinView.cpp  client_joinView.h  client_launcher.cpp  client_launcher.h  client_menuView.cpp  client_menuView.h  client_parser.cpp  client_parser.h  client_protocol.cpp  client_protocol.h  client_rendererSdl.cpp
Client/src/ClientProtocol/: ClientProtocol.cpp  ClientProtocol.h
Client/src/CommunicationThreads/: EventSender.cpp  EventSender.h  SnapshotReceiver.cpp  SnapshotReceiver.h
Client/src/Game/: Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  GameSdl.cpp  GameSdl.h  Hud.cpp  Hud.h  Obstacles.cpp  Obstacles.h  Operator.cpp  Operator.h  mapSdl.cpp  mapSdl.h
Client/src/Game/Camera/: Camera.cpp
Client/src/Game/Characters/: Enemy.cpp  Enemy.h  Object.h  Operator.cpp  Operator.h
Client/src/Game/ConfigGame/: ConfigGame.cpp  ConfigGame.h
Client/src/Game/EndGame/: EndGame.cpp  EndGame.h
Client/src/Game/Hud/: Hud.cpp  Hud.h
Client/src/Game/Lobby/: Lobby.cpp  Lobby.h
Client/src/Game/Map/: Obstacles.cpp  Obstacles.h  mapSdl.h
Client/src/Game/Music/: ManagerMusic.cpp  ManagerMusic.h
Client/src/Game/Skills/: BlitzSdl.cpp  BlitzSdl.h  GrenadeSdl.cpp  GrenadeSdl.h
Client/src/Game/Textures/: TextureManager.cpp  TextureManager.h
Client/src/GameThread/: GameDrawner.cpp  GameDrawner.h
Client/src/Launcher/: CMakeLists.txt  CreateView.cpp  CreateView.h  JoinView.cpp  Launcher.cpp  Launcher.h  MenuView.cpp  PlayerReproductor.cpp  PlayerReproductor.h
Client/src/Sdl/: CMakeLists.txt  GameSdl.cpp  GameSdl.h  HandleEvent.cpp  HandleEvent.h  RendererSdl.cpp  RendererSdl.h  Sdl.cpp  SdlException.cpp  SdlException.h  SdlImage.h  SdlTTF.cpp  TextureSdl.cpp  TextureSdl.h  WindowSdl.cpp  WindowSdl.h
Client/src/Sdl/Config/: Sdl.h  SdlImage.cpp  SdlMixer.cpp  SdlMixer.h  SdlTTF.h
Client/src/Sdl/Music/: Chunk.cpp  Chunk.h  Mixer.cpp  Mixer.h
Client/src/launcher/: CMakeLists.txt  Connect.cpp  Connect.h  InitView.cpp  JoinView.cpp  JoinView.h  Launcher.cpp  Launcher.h  client_connect.cpp  client_launcher.cpp  client_launcher.h  client_menuView.cpp  client_menuView.h
Client/src/sdl/: CMakeLists.txt  Font.cpp  Font.h  GameSdl.cpp  GameSdl.h  HandleEvent.cpp  HandleEvent.h  Hud.cpp  Hud.h  Operator.cpp  Operator.h  RendererSdl.cpp  RendererSdl.h  TextureSdl.cpp  TextureSdl.h  client_gameSdl.cpp  client_gameSdl.h  client_handleEvent.cpp  client_handleEvent.h  client_operator.cpp  client_operator.h  client_textureSdl.cpp  client_textureSdl.h  mapSdl.cpp  mapSdl.h
Common/: CMakeLists.txt  Config.cpp  Config.h  Configuration.cpp  Configuration.h  Defines.h  Event.h  EventDTO.cpp  EventDTO.h  Move.h  Protocol.cpp  Resolver.h  Snapshot.cpp  Snapshot.h  Socket.h  StOperator.cpp  StOperator.h  States.h  StructOperator.h  common_command.h  common_commanddto.cpp  common_commanddto.h  common_defines.h  common_event.h  common_eventdto.cpp  common_eventdto.h  common_liberror.h  common_move.h  common_protocol.cpp  common_protocol.h  common_queue.h  common_resolver.cpp  common_resolver.h  common_resolvererror.cpp  common_resolvererror.h  common_responsedto.cpp  common_responsedto.h  common_snapshot.cpp  common_snapshot.h  common_socket.cpp  (+4 more)
Common/Communication/: Liberror.cpp  Liberror.h  Protocol.cpp  Protocol.h  Resolver.cpp  ResolverError.cpp  ResolverError.h  Socket.cpp
Common/Configuration/: Configuration.cpp  Configuration.h
Common/Defines/: Defines.h
Common/Event/: Event.h  EventDTO.cpp  EventDTO.h
Common/Exception/: Exception.cpp  Exception.h
Common/GameStructure/: State.h  TypeDifficulty.h  TypeGame.h  TypeGrenade.h  TypeInfected.h  TypeObstacle.h  TypeOperator.h
Common/Snapshot/: EnemyDto.cpp  EnemyDto.h  GrenadeDto.cpp  GrenadeDto.h  ObstacleDto.cpp  ObstacleDto.h  OperatorDto.cpp  OperatorDto.h  Snapshot.cpp  Snapshot.h  StatsDto.cpp  StatsDto.h
Common/Thread/: Thread.cpp  Thread.h
Diagrams/: HilosDeComunicacion.drawio  protocolv1.txt
Diagrams/Server/: ServerClassDiagrams.puml
Server/: main.cpp
Server/Stats/: stats.txt  statsTest.txt
Server/src/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  EventReceiver.cpp  EventReceiver.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  GamesController.cpp  GamesController.h  IDFPlayer.cpp  IDFPlayer.h  Idf.cpp  Idf.h  P90.cpp  P90.h  P90Player.cpp  P90Player.h  Player.cpp  Player.h  SCOUTPlayer.cpp  SCOUTPlayer.h  Scout.cpp  Scout.h  Server.cpp  Server.h  ServerProtocol.cpp  ServerProtocol.h  SnapshotSender.cpp  SnapshotSender.h  Weapon.cpp  Weapon.h  server_client_reader.cpp  server_client_reader.h  server_client_writer.cpp  server_client_writer.h  server_game.cpp  server_game.h  server_games_controller.cpp  (+6 more)
Server/src/Acceptor/: Acceptor.cpp  Acceptor.h
Server/src/Command/: BlitzAtackCommand.cpp  BlitzAtackCommand.h  CheatFinishGameCommand.cpp  CheatFinishGameCommand.h  CheatInfinityLifeCommand.cpp  CheatInfinityLifeCommand.h  CheatKillEnemiesCommand.cpp  CheatKillEnemiesCommand.h  CheatSuperSpeedCommand.cpp  CheatSuperSpeedCommand.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  ExplosiveGrenadeCommand.cpp  ExplosiveGrenadeCommand.h  LeaveCommand.cpp  LeaveCommand.h  MoveCommand.cpp  MoveCommand.h  ReanimateCommand.cpp  ReanimateCommand.h  ReloadCommand.cpp  ReloadCommand.h  ShootCommand.cpp  ShootCommand.h  SmokeGrenadeCommand.cpp  SmokeGrenadeCommand.h  StopMoveCommand.h  (+7 more)
Testing/: testprotocol.cpp  tests.cpp
Testing/src/: CMakeLists.txt  SimulatedSocket.h
assets/config/: config.yaml
assets/css/: init.qss  match.qss
(+66 files in other folders)
